# university

./: .gitmodules  3.11  3.2  3.3  3.4  LICENSE  README.md  _config.yml  cheatsheet.md  date.cpp  exam-suggestions.md  headers.md  hf1.m  hf1_0.m  hf1_1.m  hf1_2.m  hf2.m  hf2_0.m  hf_3.m  hf_3_2.m  hf_3_3.m  hf_4_1.m  hf_4_2.m  hf_5_2.m  hf_6_1.m  hf_6_2.m  hf_7_1.m  hf_7_2.m  hf_8_1.m  hf_8_2.m  hf_8_4.m  index.md  random.cpp  struct.cpp  theory.md  tipusfeladatok.md
.vscode-windows/: c_cpp_properties.json  extensions.json  launch.json  settings.json  tasks.json
01/: 1.1.plang  1.16.plang  1.19b.plang  1.21b.plang  1.3a.plang  1.3b.plang  1.8a.plang  1.8c.plang
02/: 2.13a.plang  2.26a.plang
03/: 2.16a.plang  2.20b.plang  2.9.plang
04/: 3.13.plang  3.16.plang  3.18.plang  3.21.plang  3.24.plang  3.25.plang  3.34.plang  3.36.plang
05/: 3.15b.plang  3.16.plang
06/: 3.11.cpp  3.12.cpp  3.2.cpp  3.3.cpp  3.4.cpp
07/: 3.14.cpp  3.15b.cpp  3.17a.cpp  3.17b.cpp  3.19.cpp  3.20a.cpp  3.20c.cpp
08/: 3.21.cpp  6.6.cpp  6.8.cpp
09/: 3.28a.cpp  6.13.cpp  6.18.cpp
10/: 4.2b.cpp
Matematika szigorlat/: index.md
_includes/: head.html
_layouts/: default.html
_sass/: fonts.scss  jekyll-theme-hacker.scss
assets/: script.js
hf/: 2d_abrazolas.md  _erjesztes.md  egyenletek_polinomok_numerikusIntegralas.md  hidrogenkotes.md  matrix.md  polinom.md  probazh1.md  probazh2.md  probazh3.md  ragadozo_zsakmany.md  szamologep.md  szenzorstatisztikai.md  utvonalak.md  (+1 more)
ppke-1/bevprog1-hf/zh_but_rust/: Cargo.toml
ppke-1/bevprog1-hf/zh_but_rust/src/: main.new.rs
(+200 files in other folders)
