[package]
name = "zh_but_rust"
version = "0.1.0"
authors = ["tomi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
ustr = { version = "0.7", features = ["serialization"]}
rayon = "1.5"